Mon Mar 24 10:25:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: sitearch should use target_cpu.  [ruby-core:15986]

Mon Mar 24 01:24:24 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (result): use proc instead of Thread. [ruby-dev:33692]

Fri Mar 21 21:26:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::Hosts): should not use win32/resolv on cygwin.
	  [ruby-dev:29945], [ruby-dev:34095]

	* lib/win32/registry.rb (Win32::Registry.expand_environ): try upcased
	  name too for cygwin.  [ruby-dev:29945]

	* lib/win32/resolv.rb (Win32::Resolv.get_hosts_path): use expand_path.

Fri Mar 21 21:10:00 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb: Say that I am the current maintainer.

	* lib/set.rb: Ditto.

	* lib/shellwords.rb: Ditto.

	* ext/syslog/syslog.txt: Ditto.

Fri Mar 21 09:24:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (open_for_install): write block result and rewrite only
	  if changed from existing file.

Wed Mar 19 21:01:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_inspect, dir_path, dir_tell): check for frozen and closed
	  is not needed.  [ruby-dev:32640]

Wed Mar 19 20:25:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (Init_Dir): define inspect method.  [ruby-core:15960]

Wed Mar 19 14:59:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-style.el (ruby-style-{case,label}-indent): fix for labels
	  inside blocks in switch and function top level.

Wed Mar 19 14:36:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_to_inum): treat successive underscores as
	  nondigit.  [ruby-dev:34089]

Wed Mar 19 00:01:23 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (ERB::Compiler): Make some minor code optimization.

Mon Mar 17 17:11:13 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode): should use `run-mode-hooks' instead