@@ -1,3 +1,10 @@
+Mon Mar 24 19:44:53 2008  Akinori MUSHA  <knu@iDaemons.org>
+
+	* parse.y (yycompile): Always prepare a new array for each file's
+	  SCRIPT_LINES__ storage, instead of appending source lines every
+	  time a file is re-loaded; submitted by Rocky Bernstein in
+	  #18517.
+
 Mon Mar 24 10:25:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: sitearch should use target_cpu.  [ruby-core:15986]
